# learning-cuda

./: .clang-format
MatrixMultiplication/: CMakeLists.txt  kernel.cu  kernel.hpp  main.cpp
VectorAddition/: CMakeLists.txt  kernel.cu  kernel.hpp  main.cpp  manual_compile.sh
scripts/: configure_vs.sh
utils/: cudaUtils.hpp  utils.hpp
